# ibex-demo-system

./: ibex_demo_system.core  ibex_demo_system_core.core
data/: pins_sonata.xdc
rtl/fpga/: rst_ctrl.sv  top_sonata.sv
rtl/system/: sonata_rgbled.sv
sw/: CMakeLists.txt
sw/c/demo/: CMakeLists.txt
sw/c/demo/lcd_sunburst/: CMakeLists.txt  main.c  sunburst-logo-small.h
sw/common/: demo_system.c  demo_system.h  spi.c  spi.h
sw/demo/lcd_st7735/: CMakeLists.txt  fractal.c  fractal_fp.c  fractal_fp.h  main.c
